removed image link

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     <body>
         <!-- Navigation Bar -->
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="https://uaceit.com/">
-                <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+            <a class="navbar-brand" href="https://www.uaceit.com/">
                 UAceit
             </a>
         </nav>
